test/classes/forwarding/forwarding-cycle.good
forwarding-cycle.chpl:4: error: forwarding cycle detected
forwarding-cycle.chpl:3: note: for the type A
